[package]
name = "conversion_tools_example"
version = "0.1.5"
edition = "2021"
author = "WinsomeQuill"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
conversion_tools_api = { git = "https://github.com/WinsomeQuill/ConversionTools-Rust" }